spec/v1/examples/secrets/rendered/apps/secrets/vault-policy/networkpolicy.yaml
# GENERATED. Never hand-edit.
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: vault-policy
  namespace: secrets-system
  labels:
    app.kubernetes.io/name: vault-policy
    app.kubernetes.io/instance: vault-policy
    app.kubernetes.io/part-of: vault-policy
    app.kubernetes.io/managed-by: deploy-kit
    app.kubernetes.io/component: none
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: vault-policy
  policyTypes:
    - Ingress
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: secrets-system
          podSelector:
            matchLabels:
              app.kubernetes.io/instance: vault
      ports:
        - protocol: TCP
          port: 8200
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
